--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Calendar">
     <link rel="manifest" href="manifest.json">
-    <link rel="apple-touch-icon" href="icon-192.png"> <!-- Placeholder icon -->
+    <link rel="apple-touch-icon" href="icon-192.png">
 
     <link rel="stylesheet" href="style.css">
 
@@ -29,28 +29,43 @@
             <div class="header-left">
                 <h1 id="monthYear">Ocak 2024</h1>
             </div>
+
+            <div class="view-switcher">
+                <button class="view-btn active" data-view="week">Hafta</button>
+                <button class="view-btn" data-view="day">Gün</button>
+                <button class="view-btn" data-view="month">Ay</button>
+            </div>
+
             <div class="header-right">
-                <button id="importBtn" class="nav-btn" style="margin-right: 10px;">Ders Ekle</button>
+                <button id="importBtn" class="nav-btn" title="Ders Programı Ekle">+</button>
                 <button id="prevBtn" class="nav-btn">&lt;</button>
                 <button id="todayBtn" class="nav-btn">Bugün</button>
                 <button id="nextBtn" class="nav-btn">&gt;</button>
             </div>
         </header>
 
-        <!-- Days of Week -->
-        <div class="weekdays">
-            <div>Pzt</div>
-            <div>Sal</div>
-            <div>Çar</div>
-            <div>Per</div>
-            <div>Cum</div>
-            <div>Cmt</div>
-            <div>Paz</div>
+        <!-- Weekdays Header (Shared) -->
+        <div id="weekdaysHeader" class="weekdays">
+            <!-- Injected via JS -->
         </div>
 
-        <!-- Calendar Grid -->
-        <div id="calendar" class="calendar-grid">
-            <!-- Days will be injected here via JS -->
+        <!-- Views Container -->
+        <div class="views-container">
+            <!-- Time Grid (Week & Day) -->
+            <div id="timeGrid" class="time-grid-container">
+                <div class="time-axis">
+                    <!-- 08:00 - 22:00 Injected JS -->
+                </div>
+                <div id="weekGrid" class="week-grid">
+                    <!-- Columns & Events Injected JS -->
+                    <div id="currentTimeLine" class="current-time-line"></div>
+                </div>
+            </div>
+
+            <!-- Month Grid (Hidden by default) -->
+            <div id="monthGrid" class="calendar-grid hidden">
+                <!-- Days injected via JS -->
+            </div>
         </div>
     </div>
 
@@ -61,22 +76,25 @@
             <h2 id="modalDate">Etkinlik Ekle</h2>
 
             <input type="text" id="eventTitle" placeholder="Etkinlik Adı" autofocus>
-            <input type="time" id="eventTime">
+            <div class="time-inputs">
+                <input type="time" id="eventStartTime" value="09:00">
+                <span>-</span>
+                <input type="time" id="eventEndTime" value="10:00">
+            </div>
 
             <div class="category-select">
-                <label><input type="radio" name="category" value="stock" checked> <span class="dot stock"></span>
-                    Borsa</label>
-                <label><input type="radio" name="category" value="course"> <span class="dot course"></span> Ders</label>
+                <label><input type="radio" name="category" value="koc" checked> <span class="dot koc"></span>
+                    Koç</label>
+                <label><input type="radio" name="category" value="stock"> <span class="dot stock"></span> Borsa</label>
                 <label><input type="radio" name="category" value="content"> <span class="dot content"></span>
                     İçerik</label>
                 <label><input type="radio" name="category" value="personal"> <span class="dot personal"></span>
                     Kişisel</label>
-                <label><input type="radio" name="category" value="koc"> <span class="dot koc"></span> Koç</label>
             </div>
 
             <button id="saveEventBtn">Kaydet</button>
-            <div id="eventList">
-                <!-- Existing events for this day -->
+            <div id="deleteEventContainer" style="margin-top: 10px; display: none;">
+                <button id="deleteEventBtn" style="background: #ef4444; width: 100%;">Sil</button>
             </div>
         </div>
     </div>
