Akıllı parser, veri temizleme ve aylık görünüm iyileştirmesi

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
             <div class="header-right">
                 <button id="importBtn" class="nav-btn" title="Ders Programı Ekle">+</button>
+                <button id="clearDataBtn" class="nav-btn" title="Tüm Verileri Temizle"
+                    style="color: #ef4444; border-color: #ef4444;">&times;</button>
                 <button id="prevBtn" class="nav-btn">&lt;</button>
                 <button id="todayBtn" class="nav-btn">Bugün</button>
                 <button id="nextBtn" class="nav-btn">&gt;</button>
